# wspc_rep

./: .gitignore  LICENSE  MANIFEST.in  README.md  WSPC_pipeline.ipynb  setup.cfg  setup.py  util.py
Code/: WSPC_pipeline.ipynb  WSPC_pipeline_1.2.21.ipynb  WSPC_train_pipeline.ipynb  data.py  feature_importance.py  feature_selection.py  predict_with_existing_model_pipline.ipynb  taxa.py  train_and_predict.py  util.py  visualization.py
Data/: X_train_corr_mat_0.8_k450.csv  X_train_corr_mat_k450.csv  test_genomes_information.csv  test_genomes_verified.csv  train_genomes_info.csv  train_genomes_information.csv  validation_genomes.fasta  validation_genomes_information.csv
Data/Bacpacs/: Bacpacs-Supplementary.csv  bacpacs_test.csv
Data/PATRIC_labeled_genomes/: labeled_test.csv
Data/WSPC_test_preds/: bacpacs_prediction_on_wspc_test.csv
Notebooks/: Generate_train_and_test_genomes.ipynb  WSPC_train_pipeline.ipynb
Notebooks/Code/: feature_selection.py  train_and_predict.py  util.py  visualization.py
Notebooks/WSPC Model/: WSPC_model.pkl
Notebooks/comp_analysis/: comparative_analysis.ipynb
Paper/Tables/: test_set_bacpacs.tex  test_set_genomes.tex  top_hps.tex
WSPC Model/: WSPC_model.pkl  wspc_classifier.pkl  wspc_classifier_features.json
WSPC Model/WSPC order files/: wspc_order_train_10minsize.json  wspc_order_train_validation_10minsize.json
comp_analysis/: comparative_analysis.ipynb  test_genomes_verified.csv  wspc_test_preds.csv
comp_analysis/.ipynb_checkpoints/: comparative_analysis-checkpoint.ipynb
comp_analysis/Bacpacs/: Bacpacs_comparative_analysis.ipynb  Bacpacs_download_genomes.ipynb
comp_analysis/results pathogenfinder/: PathogenFinder_cdhit_raw_104608.5.txt  PathogenFinder_cdhit_raw_104628.50.txt  PathogenFinder_cdhit_raw_109328.8.txt  PathogenFinder_cdhit_raw_1117645.412.txt  (+359 more)
(+240 files in other folders)
