[metadata]
name = wspc
version = 0.0.2
author = Dina & Shaked
author_email = zivukelson@gmail.com
description = Protein-content based pathogenicity classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shakedna1/wspc_rep
project_urls =
    Bug Tracker = https://github.com/shakedna1/wspc_rep/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pandas
    numpy
    sklearn
    scipy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wspc = wspc:command_line.main

[options.package_data]
wspc = model/WSPC_model.pkl