[metadata]
name = wspc
version = 0.0.2
author = Shaked Naor & ‪Dina Svetlitsky
author_email = zivukelson@gmail.com
description = Protein-content-based bacterial pathogenicity classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shakedna1/wspc_rep
project_urls =
    Bug Tracker = https://github.com/shakedna1/wspc_rep/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pandas>=1.2.4
    numpy>=1.20.3
    scikit-learn==0.24.2
    scipy>=1.6.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wspc = wspc:command_line.main

[options.package_data]
wspc = model/WSPC_model.pkl